# Ctrl-Shift-Alt-Win-L

./: .env  .gitignore  README.MD  README.md  agent.py  assistant.py  database.db  db.py  documentation.txt  helpers.py  hi.html  main.py  models.py  package-lock.json  pyproject.toml  render.yaml  schema.py  stt.py  user_input.txt
backend/: assistant.py  database.db  db.py  helpers.py  main.py  models.py  pyproject.toml  requirements.txt  schema.py
frontend/aimen-work/Time Travel  Film Journey/: Time Travel  Film Journey.sln
frontend/aimen-work/Time Travel  Film Journey/Time Travel  Film Journey/: Home.html  JavaScript.js  MyFilms.html  MyJourney.html  Time Travel  Film Journey.vbproj  Timeline.css
frontend/aimen-work/Time Travel  Film Journey/Time Travel  Film Journey/My Project/: AssemblyInfo.vb  Resources.Designer.vb  Settings.Designer.vb
frontend/film-hackathon/: package-lock.json  package.json
frontend/film-project/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/film-project/src/: App.jsx  App.tsx  main.jsx  output.css
frontend/film-project/src/API/: Auth.js  Discovery.js  FilmLogger.js  Timeline.js
frontend/film-project/src/api/: api.js
frontend/film-project/src/pages/: About.jsx  FilmLogger.jsx  discovery.jsx  home.jsx  login.jsx  test.jsx  timeline.jsx
frontend/film-project/src/pages/Home/: Home.html  JavaScript.js  MainStyle.css
frontend/film-project/src/pages/components/: Header.jsx
frontend/film-project/src/pages/styles/: about.css  discovery.css  glass.css  header.css  home.css  (+1 more)
speechstuff/: sttchatbot.py
