[tool.poetry]
name = "watermelon"
version = "0.1.0"
description = ""
authors = ["Arpan Pandey <arpanpandey.aps@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.4"}
sqlmodel = "^0.0.22"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
swarm = {git = "https://github.com/openai/swarm.git"}
fastapi-auth0 = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
